# Cplusplus

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab10/scheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab7/ksztalt/: CMakeLists.txt  Kolo.cpp  Kolo.h  Ksztalt.cpp  Ksztalt.h  Kula.cpp  Kula.h  Trojkat.cpp  Trojkat.h  main.cpp
lab8/moviesubtitles/: CMakeLists.txt  MicroDvdSubtitles.cpp  MicroDvdSubtitles.h  MovieSubtitles.cpp  MovieSubtitles.h  SubRipSubtitles.cpp  SubRipSubtitles.h  Wyjatki.cpp  Wyjatki.h  inherited_function.h  main.cpp
lab9/: CMakeLists.txt
(+22 files in other folders)
